# Enclave

./: .gitignore  ENCLAVE_SPEC.md  PRISM_Protocol_Technical_Spec.md  README.md
contracts/: README.md  foundry.toml
contracts/script/: DeployEnclave.s.sol
contracts/src/: IntentPool.sol  SolverRegistry.sol  SolvexSettlement.sol
contracts/src/interfaces/: IIntentPool.sol  ISolverRegistry.sol  ISolvexVerifier.sol
contracts/stylus/solver-verifier/: Cargo.toml
contracts/stylus/solver-verifier/src/: lib.rs  main.rs
contracts/test/: IntegrationTest.t.sol  SolvexSettlement.t.sol
contracts/test/unit/: IntentPool.t.sol
crate/enclave-shared/: Cargo.toml
crate/tee-solver/: Cargo.toml  Dockerfile  README.md  demo.py  demo_output.txt  output.txt
crate/tee-solver/benches/: benchmark.rs
crate/tee-solver/src/: api.rs  attestation.rs  competition.rs  error.rs  lib.rs  main.rs  merkle.rs  simulation.rs  types.rs  verifier_interface.rs
crate/tee-solver/tests/: integration_tests.rs
